[ch209 finish] Fixing the nav heaxder covering the body on viewport resize

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,5 +1,11 @@
 .app-body
   padding: 1rem
+  margin-top: 60px
+
+  @media only screen and (max-width: 600px)
+    margin-top: 50px
+  @media only screen and (min-width: 992px)
+    margin-top: 70px
 
 .App-link
   color: #61dafb
