--- a/src/components/nav/GlobalNav.sass
+++ b/src/components/nav/GlobalNav.sass
@@ -1,8 +1,10 @@
 .GlobalNav
-    height: 50px
     .App-logo
         height: 5vmin
         pointer-events: none
+    .App-Logo-Link
+        text-decoration: none
+        color: white
 
     @media (prefers-reduced-motion: no-preference)
         .App-logo
